# dexter-contacts

./: CMakeLists.txt  INSTALL  README.md
.bzr/branch/: branch.conf  last-revision
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
data/: CMakeLists.txt  dexter-contacts.desktop
po/: dexter-contacts.pot
src/: CMakeLists.txt  ContactView.vala  ContactsList.vala  ContactsManager.vala  Window.vala
src/Dialogs/: ContactDialog.vala  InfoPanel.vala
src/Widgets/: ContactImage.vala  EntryGrid.vala  MapView.vala
